2006-02-21 10:53  PeterB

	* src/balsa-mblist.c: hide title and make column natural size when
	using single column.

2006-02-20 22:51  PeterB

	* src/: sendmsg-window.c, sendmsg-window.h: save reflow widget in
	BalsaSendmsg, in case user opens multiple windows.

2006-02-19 12:39  PeterB

	* src/balsa-mblist.c, libbalsa/mailbox.c: show count of hidden
	messages on status bar; show only non-zero counts.
	* src/balsa-message.c: make sure widget can focus.

2006-02-18 15:31  PeterB

	* src/sendmsg-window.c, libbalsa/address-entry.c,
	libbalsa/address-entry.h: use Escape instead of ctrl+R for manual
	address completion.
	* libbalsa/address-book-ldap.c: make LDAP address book expensive.
	* src/pref-manager.c: edit address book on row-activated; add
	closure to add_button_to_box.

2006-02-18 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* src/balsa-mime-widget-text.c: fix bug 330093 -- 'copy URL' when
	right-clicking one in a mail.

2006-02-17 21:26  PeterB

	* src/: balsa-message.c, balsa-message.h,
	balsa-mime-widget-callbacks.c, main-window.c, main-window.h:
	one-key mail reading using space bar.
	* src/main.c: drop gdk lock before syncing mailboxes.
	* src/mailbox-node.c: check mailbox in an idle handler.
	* src/balsa-index.c: use the gdk lock to control access to
	LibBalsaMailbox::msg_tree.
	* libbalsa/: libbalsa.c, libbalsa.h, mailbox.c, mailbox.h,
	mailbox_imap.c, mailbox_local.c: use the gdk lock to control access
	to LibBalsaMailbox::msg_tree.

2006-02-15  Pawel Salek

	* balsa.desktop.in: Terminal=0 -> Terminal=false
	* libbalsa/rfc3156.c: failed gpg execution is warning, not just info
	(Albrecht Dreß).

2006-02-13 22:42  PeterB

	* src/: balsa-mblist.c, balsa-icons.c, balsa-icons.h: use icon-name
	GtkTreeViewColumn attribute.
	* src/: balsa-index.c, balsa-index.h, main-window.c,
	message-window.c: reset view filter to show unread message.
	* src/pref-manager.c: move message-window group to display-options